--- a/voicenotion_planification_ux.tex
+++ b/voicenotion_planification_ux.tex
@@ -221,14 +221,13 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
     
     Basés sur notre recherche, nous avons développé deux personas principaux qui représentent nos utilisateurs cibles:
     
-    
-    
-    \paragraph{Persona 1: Yasmine l'Étudiante en Informatique}
-    
-    \begin{figure}[htbp]
+    \begin{figure}[H]
         \centering
         \includegraphics[width=\textwidth]{assets/docs/yassmine-personaa.jpg}
     \end{figure}
+    
+    \paragraph{Persona 1: Yasmine l'Étudiante en Informatique}
+    
     
     \begin{itemize}
         \item \textbf{Profil:} Étudiante de 21 ans en 3ème année d'Informatique à Boumerdes. Adepte des applications mobiles (Notion, Telegram, Google Docs), elle utilise principalement son téléphone Android.
@@ -237,14 +236,16 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
         \item \textbf{Comportements:} Jongle entre mémos vocaux, captures d'écran et cahiers. Passe beaucoup de temps à réécrire et à organiser ses notes, souvent tard le soir.
         \item \textbf{Citation:} "J'ai toujours du mal à retrouver mes idées lorsque j'enregistre des mémos vocaux ; je veux que tout soit clair et bien rangé."
     \end{itemize}
-    
-    \paragraph{Persona 2: Walid l'Entrepreneur}
-    
-    \begin{figure}[htbp]
+
+    \begin{figure}[H]
         \centering
         \includegraphics[width=\textwidth]{assets/docs/walid-persona.jpg}
     \end{figure}
-    
+
+
+
+    \paragraph{Persona 2: Walid l'Entrepreneur}
+
     \begin{itemize}
         \item \textbf{Profil:} Fondateur de startup de 33 ans (agence de marketing digital) à Oran. Il utilise des outils comme Slack, Notion, et ChatGPT sur son Samsung Galaxy S22 Ultra et MacBook Pro.
         \item \textbf{Objectifs:} Capturer rapidement les idées spontanées, déléguer facilement des tâches, et organiser ses idées et tâches par commandes vocales, notamment en déplacement.
@@ -253,15 +254,6 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
         \item \textbf{Citation:} "Quand une idée me vient, je dois l’écrire direct. Sinon, je l’oublie et c’est mort."
     \end{itemize}
     
-    % Explication brève avant chaque figure
-        \textit{La figure suivante illustre les personas principaux de VoiceNotion.}
-    \begin{figure}[htbp]
-        \centering
-        % PLACEHOLDER: Ajoutez ici l'image illustrant les trois personas (par exemple, avatars ou diagramme).
-        %\includegraphics[width=0.9\textwidth]{assets/docs/voicenotion_personas.png}
-        \caption{Les deux personas principaux de VoiceNotion. \newline\textit{Cette illustration synthétise les profils cibles pour la conception UX.}}
-        \label{fig:voicenotion_personas}
-    \end{figure}
     
     % ===============================
     % Section: Wireframes et Design System
@@ -273,33 +265,20 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
     
     % Explication brève avant la figure
         \textit{La figure suivante présente un wireframe représentatif de l'application mobile.}
-    \begin{figure}[htbp]
+    \begin{figure}[H]
         \centering
         \includegraphics[width=0.9\textwidth]{assets/docs/mobile/wireframe_app-1.jpg}
         \caption{Wireframe de l'application mobile VoiceNotion. \newline\textit{Ce schéma illustre la navigation et la disposition générale des écrans de authentification.}}
         \label{fig:wireframe_app_auth}
     \end{figure}
     
-    \begin{figure}[htbp]
+    \begin{figure}[H]
         \centering
         \includegraphics[width=0.9\textwidth]{assets/docs/mobile/wireframe_app-2.jpg}
         \caption{Wireframe de l'application mobile VoiceNotion. \newline\textit{Ce schéma illustre la navigation et la disposition générale des écrans principaux.}}
         \label{fig:wireframe_app_main}
     \end{figure}
     
-    \subsection{Wireframes du site web}
-    
-    Des wireframes spécifiques ont également été conçus pour la version web afin d'assurer une cohérence d'expérience entre plateformes.
-    
-    % Explication brève avant la figure
-        \textit{La figure suivante présente un wireframe représentatif du site web VoiceNotion.}
-    \begin{figure}[htbp]
-        \centering
-        % PLACEHOLDER: Ajoutez ici le wireframe du site web (ex: assets/docs/wireframe_web.png)
-        %\includegraphics[width=0.8\textwidth]{assets/docs/wireframe_web.png}
-        \caption{Wireframe du site web VoiceNotion. \newline\textit{Ce schéma met en avant la structure des pages principales et la logique de navigation.}}
-        \label{fig:wireframe_web}
-    \end{figure}
     
     \subsection{Synthèse du Design System}
     
@@ -309,8 +288,6 @@ Le tableau~\ref{fig:planification_table} fournit un aperçu visuel ; ci-dessous 
     \subsubsection{Scénarios d'utilisations}
     
     Pour chaque persona, nous avons développé des scénarios d'utilisation qui illustrent comment VoiceNotion répondrait à leurs besoins spécifiques:
-    
-    
     
     \paragraph{Scénario 1: Yasmine en cours d'Algorithmique}
     
